<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/screen_background_color">

    <EditText
        android:id="@+id/emailedit"
        android:gravity="center"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingVertical="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056"
        android:background="@drawable/rounded_fields"/>

    <EditText
        android:gravity="center"
        android:background="@drawable/rounded_fields"
        android:id="@+id/passwordedit"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:hint="@string/password"
        android:paddingVertical="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailedit"
        app:layout_constraintVertical_bias="0.202" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="142dp"
        android:layout_height="54dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/login"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordedit" />

    <Button
        android:layout_width="142dp"
        android:layout_height="54dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.805"
        android:id="@+id/signupbtn"
        app:layout_constraintStart_toStartOf="@id/loginbtn"
        app:layout_constraintTop_toBottomOf="@id/passwordedit" />

    <Switch
        android:id="@+id/remembermeswitch"
        android:layout_width="63dp"
        android:layout_height="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.729"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginbtn"
        app:layout_constraintVertical_bias="0.337"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:layout_width="160dp"
        android:layout_height="51dp"
        android:text="@string/remember_me"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.374"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginbtn"
        app:layout_constraintVertical_bias="0.362"
        android:id="@+id/remembermetext"/>

</androidx.constraintlayout.widget.ConstraintLayout>